// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Match snapshots Field Container internal 1`] = `
<span
  className="field-container__Container-sc-qv1os7-0 trAty"
  data-test="field-container"
>
  <span>
    <div
      className="SOutline"
    >
      <input />
    </div>
  </span>
</span>
`;

exports[`Match snapshots Field Container with error 1`] = `
<span
  className="field-container__Container-sc-qv1os7-0 jOqnRO"
  data-test="field-container"
>
  <span>
    <div
      className="SOutline"
    >
      <input />
    </div>
  </span>
</span>
`;
